# axum-api

./: .gitignore  Cargo.toml  Dockerfile  docker-compose-db.yml
kubernetes/: backend-secret.yaml  backend.yaml  postgres-config.yaml  postgresDb.yaml
src/: main.rs
src/item/: mod.rs
src/item/controller/: controller.rs  mod.rs
src/item/controller/dto/: create_item_request_dto.rs  item_dto.rs  mod.rs
src/item/controller/param/: mod.rs  storage_area_params.rs
src/item/database/: database.rs
src/item/error_handler/: database_error_details.rs  error_handler.rs  mod.rs
src/item/model/: item.rs
src/item/repository/: repository.rs
src/item/service/: service.rs
